--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Your Title
+title: Pavel's Site
 description: > # this means to ignore newlines until "baseurl:"
-  Your description
+  A place for things I write and projects I've worked on
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "Your-Link.github.io" # the base hostname & protocol for your site
+url: "pavelkomarov.github.io" # the base hostname & protocol for your site
 # Build settings
 
 logo: "../css/2016_style/img/icon-large.png"
@@ -25,6 +25,8 @@ social:
     url: https://linkedin.com/pub/pavel-komarov/48/340/a28
   - title: instagram
     url: https://www.instagram.com/skinny_ape/
+  - title: stack-overflow
+    url: https://stackoverflow.com/users/story/2084503
 
 # Build settings
 markdown: kramdown
