--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "pavelkomarov.github.io" # the base hostname & protocol for your site
 # Build settings
 
-logo: "../css/2016_style/img/icon-large.png"
+favicon: "../assets/icon.png"
 
 google_site_verification: googleXXXXXXXXXXXXXXXX.html
 
