--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,13 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
 
+# Build settings
+markdown: kramdown
+permalink: pretty
+
+# Site data below, because I don't want a whole /_data/template.yml file to access only these few things.
+# Variables defined here are accessible via {{ site.color.secondary }}, for example.
+
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - icon: fab fa-facebook
@@ -30,6 +37,14 @@ social:
   - icon: fab fa-flipboard
     url: https://flipboard.com/@pavel_komarov/pavel%27s-favorites-78tpvu6pz
 
-# Build settings
-markdown: kramdown
-permalink: pretty
+# Color settings (hex-codes without the leading hash-tag)
+color:
+  primary: 3cb371
+  secondary: 6ecf99
+  secondary-dark: 00283c
+  muted: 777
+
+# Font Families
+font:
+  primary: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
+  secondary: '"Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
