removed feed.xml, because I don't need an RSS feed on this yet and can find a sane way later; figured out how jekyll decides what should be a page and where to put it and how to access it through a browser for testing

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "pavelkomarov.github.io" # the base hostname & protocol for your site
 # Build settings
 
-google_site_verification: googleXXXXXXXXXXXXXXXX.html
+#google_site_verification: googleXXXXXXXXXXXXXXXX.html
 
 plugins:
   - jekyll-sitemap
