cleaned out pages directory and realized I don't need any but 404, so moved that and deleted pages; added jekyll-tidy to config so htmls come out neatly formatted and more readable; removed some prepending whitespace from js.html now that tidying is automatic; added grey background to welcome screen in agency.css so visitors can see the white text if the images loads slowly; removed logo.html because I don't need it; cleaned up writing folder a bit--referencing things in that folder in liquid and creating links for each of them in that section on the homepage yet to be figured out; moved quotes to writing folder

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ url: "pavelkomarov.github.io" # the base hostname & protocol for your site
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-tidy
 
 # Build settings
 markdown: kramdown
