removed  from config since it doesn't do what I want--sticking with permalinking each file for now since I can't figure out how to permalink them all to the site root; dramatically overhauled the writing section css in to a generic, much more minimal, equally functional set of gallery classes--including hours thinking about dynamically resizing squares and  and a stackoverflow question I ultimately best answered on my own after enough playing in jsfiddle; updated writing.html to be neater and reflect new minimal classes; tweaked some things in writing, added jokes; added a cheese picture for testing and because I couldn't think of anything better to envision jokes; fixed anchor above contact section so navigation doesn't cut off the section title anymore.

--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,18 @@ plugins:
 
 # Build settings
 markdown: kramdown
-permalink: pretty
 
 # Site data below, because I don't want a whole /_data/template.yml file to access only these few things.
 # Variables defined here are accessible via {{ site.color.secondary }}, for example.
 
 collections: # https://jekyllrb.com/docs/collections
   - writing # things in the _writing folder are now a collection accessible via site.writing
+  - projects
 
 include:  # kludgy solution: Jekyll ignores underscore-prepended folders at write-time yet needs
   # underscores for collections, so a collection of written pages needs to be specifically re-included.
   - _writing
+  - _projects
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
