--- a/_config.yml
+++ b/_config.yml
@@ -51,5 +51,5 @@ color:
 
 # Font Families
 font:
-  primary: 'Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif'
-  secondary: '"Droid Serif", "Helvetica Neue", Helvetica,Arial,sans-serif'
+  sans: 'Helvetica,Montserrat,Arial'
+  serif: 'Caslon,Georgia,Sabon,Garamond'
