--- a/_config.yml
+++ b/_config.yml
@@ -27,13 +27,13 @@ social:
   - icon: fab fa-linkedin
     url: https://linkedin.com/pub/pavel-komarov/48/340/a28
   - icon: fab fa-instagram
-    url: https://www.instagram.com/skinny_ape/
+    url: https://www.instagram.com/swamp_elf/
   - icon: fab fa-stack-overflow
     url: https://stackoverflow.com/users/story/2084503
   - icon: fa fa-envelope
     url: mailto:pvlkmrv@gmail.com
   - icon: fa fa-file
-    url: https://www.dropbox.com/s/9ngmmye4pu2kjj9/Resume%20abridged%202017.8.30.pdf?dl=0
+    url: https://pavelkomarov.com/assets/Resume%20abridged%202019-9-18.pdf
   - icon: fab fa-flipboard
     url: https://flipboard.com/@pavel_komarov/pavel%27s-favorites-78tpvu6pz
 
