--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
+plugins:
+  - jekyll-remote-theme
+
+remote_theme: pavelkomarov/pavel-theme
+
 title: Pavel's Site
 description: A place for things I write and projects I've worked on
 url: "pavelkomarov.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
-
-# Site data below, because I don't want a whole /_data/template.yml file to access only these few things.
-# Variables defined here are accessible via {{ site.color.secondary }}, for example.
 
 collections: # https://jekyllrb.com/docs/collections
   - writing # things in the _writing folder are now a collection accessible via site.writing
@@ -16,34 +18,3 @@ include:  # kludgy solution: Jekyll ignores underscore-prepended folders at writ
   # underscores for collections, so a collection of written pages needs to be specifically re-included.
   - _writing
   - _projects
-
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
-social:
-  - icon: fab fa-facebook
-    url: https://www.facebook.com/hewhoiscalledpavel
-  - icon: fab fa-github
-    url: https://github.com/pavelkomarov
-  - icon: fab fa-linkedin
-    url: https://linkedin.com/pub/pavel-komarov/48/340/a28
-  - icon: fab fa-instagram
-    url: https://www.instagram.com/swamp_elf/
-  - icon: fab fa-stack-overflow
-    url: https://stackoverflow.com/users/story/2084503
-  - icon: fa fa-envelope
-    url: mailto:pvlkmrv@gmail.com
-  - icon: fa fa-file
-    url: https://pavelkomarov.com/assets/Resume%20abridged%202019-9-18.pdf
-  - icon: fab fa-flipboard
-    url: https://flipboard.com/@pavel_komarov/pavel%27s-favorites-78tpvu6pz
-
-# Color settings (hex-codes without the leading hash-tag)
-color:
-  primary: 3cb371
-  secondary: 6ecf99
-  secondary-dark: 00283c
-  muted: 555
-
-# Font Families
-font:
-  sans: 'Helvetica,Montserrat,Arial'
-  serif: 'Caslon,Georgia,Sabon,Garamond'
