--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+plugins: # this is necessary to make it work locally
+  - jekyll-remote-theme
+
 remote_theme: pavelkomarov/hyde
 
 title: Pavel's Site
